# badbaseconverter

./: Cargo.toml  Contributing.md  LICENSE  Learn.md  README.md
src/: bintodec.rs  dectobin.rs  dectohex.rs  hextodec.rs  main.rs  utils.rs
