[package]
name = "bconv"
version = "0.1.0"
edition = "2021"
authors = ["Gustavo Silveira gustavo24gss@gmail.com"]
license = "MIT"
description = "Bad Base Converter: a very bad base converter"
readme = "README.md"
repository = "https://github.com/gustavosilveiragss/badbinary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
cargo-deb = "1.42.2"
clap = { version = "4.1.9", features = ["derive"] }
